<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.usersearchresult.UserSearchResultActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUserResults"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:paddingVertical="@dimen/dp8"
        android:paddingHorizontal="@dimen/dp16"
        android:clipToPadding="false"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/item_user"
        tools:itemCount="7" />

    <include
        android:id="@+id/layoutLoading"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>